fixed the mobile nav overflow issue

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,3 @@
-body {
-    overflow: hidden;
-}
-
 header {
     width: 100%;
     height: 100px;
@@ -155,7 +151,7 @@ header nav .social {
 
 .mobile-nav {
     opacity: 1;
-    position: absolute;
+    position: fixed;
     height: 100vh;
     width: 60vw;
     top: 50px;
@@ -163,6 +159,7 @@ header nav .social {
     z-index: 50;
     background: rgba(0, 0, 0, .8);
     transition: all 0.5s ease;
+    overflow: hidden;
 }
 
 .mobile-nav ul {
